fix problems
1. reset problem is fixed. except server start-up problem
2. new map is added -- testing
//to do
1. compare 3 types of tactics -- no memory search, memory search, co-op
memory search